--- a/requirements_azure.txt
+++ b/requirements_azure.txt
@@ -1,8 +1,6 @@
 absl-py==2.1.0
 acvl-utils==0.2
 adal==1.2.7
-albucore==0.0.13
-albumentations==1.4.12
 annotated-types==0.7.0
 argcomplete==3.5.0
 asttokens==2.4.1
@@ -23,6 +21,10 @@ azure-storage-blob==12.22.0
 azure-storage-file-datalake==12.16.0
 azure-storage-file-share==12.17.0
 azureml-core==1.57.0.post1
+azureml-dataprep==5.1.6
+azureml-dataprep-native==41.0.0
+azureml-dataprep-rslex==2.22.4
+azureml-dataset-runtime==1.57.0
 backcall==0.2.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
@@ -35,6 +37,7 @@ certifi==2024.7.4
 cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpickle==2.2.1
 colorama==0.4.6
 coloredlogs==15.0.1
 connected-components-3d==3.17.0
@@ -95,7 +98,6 @@ marshmallow==3.22.0
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-MedPy==0.5.2
 mistune==3.0.2
 monai==1.3.2
 mpmath==1.3.0
@@ -112,7 +114,7 @@ networkx==3.3
 nibabel==5.2.1
 nilearn==0.10.4
 nnunetv2==2.4.2
-numpy==1.26.4
+numpy==1.23.5
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -153,6 +155,7 @@ protobuf==4.25.4
 psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
