--- a/azureml-environment.yml
+++ b/azureml-environment.yml
@@ -3,7 +3,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.9  # You can specify the Python version here
+  - python=3.10.12  # You can specify the Python version here
   - pip
   - numpy=1.23.5  # Use a compatible version with azureml-dataset-runtime
   - pip:
@@ -11,4 +11,4 @@ dependencies:
     - azureml-core==1.56.0  # Optional: Use the same version of azureml-core
     - medpy==0.5.2  # Add any other necessary dependencies here
     - albumentations==1.4.12
-    - -r requirements_azure.txt  # Your requirements file
+    - -r ./requirements_azure.txt  # Your requirements file
