--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,12 @@ acvl-utils==0.2
 adal==1.2.7
 albucore==0.0.13
 albumentations==1.4.12
+alembic==1.13.2
+aniso8601==9.0.1
 annotated-types==0.7.0
 argcomplete==3.5.0
+asciitree==0.3.3
+astor==0.8.1
 asttokens==2.4.1
 attrs==23.2.0
 azure-ai-ml==1.20.0
@@ -23,6 +27,10 @@ azure-storage-blob==12.22.0
 azure-storage-file-datalake==12.16.0
 azure-storage-file-share==12.17.0
 azureml-core==1.57.0.post1
+azureml-dataprep==5.1.6
+azureml-dataprep-native==41.0.0
+azureml-dataprep-rslex==2.22.4
+azureml-dataset-runtime==1.57.0
 backcall==0.2.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
@@ -30,18 +38,27 @@ batchgenerators==0.25
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.7.4
 cffi==1.17.1
 charset-normalizer==3.3.2
+clearml==1.16.5rc0
 click==8.1.7
+cloudpickle==2.2.1
 colorama==0.4.6
 coloredlogs==15.0.1
+colorlog==6.8.2
+comm==0.2.2
 connected-components-3d==3.17.0
 contextlib2==21.6.0
 contourpy==1.2.1
 cryptography==43.0.1
+cucim-cu12==24.8.0
+cupy-cuda12x==13.3.0
 cycler==0.12.1
+databricks-sdk==0.32.1
+debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
@@ -50,33 +67,59 @@ docker==7.1.0
 docopt==0.6.2
 dynamic-network-architectures==0.3.1
 efficientnet-pytorch==0.7.1
+einops==0.8.0
 eval_type_backport==0.2.0
 executing==2.0.1
+fasteners==0.19
 fastjsonschema==2.20.0
-filelock==3.15.4
+fastrlock==0.8.2
+filelock==3.11.0
+fire==0.6.0
+Flask==3.0.3
 flatbuffers==24.3.25
 fonttools==4.53.1
 fsspec==2024.6.1
+furl==2.1.3
 future==1.0.0
+gdown==5.2.0
 git-filter-repo==2.45.0
+gitdb==4.0.11
+GitPython==3.1.43
 google-api-core==2.19.2
 google-auth==2.34.0
 googleapis-common-protos==1.65.0
+graphene==3.3
+graphql-core==3.2.4
+graphql-relay==3.2.0
 graphviz==0.20.3
+greenlet==3.1.0
 grpcio==1.65.2
+gunicorn==23.0.0
+h5py==3.11.0
 huggingface-hub==0.24.7
 humanfriendly==10.0
 humanize==4.10.0
 idna==3.7
 imagecodecs==2024.6.1
 imageio==2.34.2
+importlib_metadata==8.4.0
+ipykernel==6.29.5
 ipython==8.12.3
 isodate==0.6.1
+itk==5.4.0
+itk-core==5.4.0
+itk-filtering==5.4.0
+itk-io==5.4.0
+itk-numerics==5.4.0
+itk-registration==5.4.0
+itk-segmentation==5.4.0
+itsdangerous==2.2.0
 jedi==0.19.1
 jeepney==0.8.0
 Jinja2==3.1.4
 jmespath==1.0.1
 joblib==1.4.2
+json-tricks==3.17.3
 jsonpickle==3.3.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -87,7 +130,10 @@ kiwisolver==1.4.5
 knack==0.11.0
 lazy_loader==0.4
 linecache2==1.0.0
+lmdb==1.5.1
+lpips==0.1.4
 lxml==5.2.2
+Mako==1.3.5
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -97,6 +143,8 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 MedPy==0.5.2
 mistune==3.0.2
+mlflow==2.16.2
+mlflow-skinny==2.16.2
 monai==1.3.2
 mpmath==1.3.0
 msal==1.31.0
@@ -108,11 +156,16 @@ nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 ndg-httpsclient==0.5.1
+nest-asyncio==1.6.0
 networkx==3.3
 nibabel==5.2.1
 nilearn==0.10.4
+ninja==1.11.1.1
+nni==3.0
 nnunetv2==2.4.2
-numpy==1.26.4
+nptyping==2.5.0
+numcodecs==0.13.0
+numpy==1.24.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -122,21 +175,30 @@ nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
+nvidia-ml-py==12.560.30
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
+onnx==1.16.2
 onnxruntime==1.18.1
 opencensus==0.11.4
 opencensus-context==0.1.3
 opencensus-ext-azure==1.1.13
 opencensus-ext-logging==0.1.1
 opencv-python-headless==4.10.0.84
+openslide-python==1.3.1
+opentelemetry-api==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+optuna==4.0.0
+orderedmultidict==1.0.1
 packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 paramiko==3.4.1
 parso==0.8.4
+pathlib2==2.3.7.post1
 pathspec==0.12.1
 pexpect==4.9.0
 pickleshare==0.7.5
@@ -147,12 +209,14 @@ pkginfo==1.11.1
 platformdirs==4.2.2
 portalocker==2.10.1
 pretrainedmodels==0.7.4
+prettytable==3.11.0
 prompt_toolkit==3.0.47
 proto-plus==1.24.0
 protobuf==4.25.4
 psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
@@ -161,24 +225,30 @@ pydantic_core==2.20.1
 pydash==8.0.3
 pydicom==2.4.4
 Pygments==2.18.0
-PyJWT==2.9.0
+PyJWT==2.8.0
 PyNaCl==1.5.0
+pynrrd==1.0.0
 pyOpenSSL==24.2.1
 pyparsing==3.1.2
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-gdcm==3.0.24.1
+PythonWebHDFS==0.2.3
+pytorch-ignite==0.4.11
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
+regex==2024.9.11
 requests==2.32.3
 requests-oauthlib==2.0.0
+responses==0.25.3
 rich==13.7.1
 rpds-py==0.19.0
 rsa==4.9
 safetensors==0.4.5
-scikit-image==0.24.0
+schema==0.7.7
+scikit-image==0.23.2
 scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
@@ -186,18 +256,25 @@ SecretStorage==3.3.3
 segmentation-models-pytorch==0.3.4
 shellingham==1.5.4
 SimpleITK==2.3.1
+simplejson==3.19.3
 six==1.16.0
+smmap==5.0.1
 soupsieve==2.5
+SQLAlchemy==2.0.35
+sqlparse==0.5.1
 stack-data==0.6.3
 strictyaml==1.7.3
 sympy==1.13.0
 tabulate==0.9.0
 tensorboard==2.17.0
 tensorboard-data-server==0.7.2
+tensorboardX==2.6.2.2
+termcolor==2.4.0
 threadpoolctl==3.5.0
 tifffile==2024.7.2
 timm==0.9.7
 tinycss2==1.3.0
+tokenizers==0.19.1
 tomli==2.0.1
 torch==2.3.1
 torchaudio==2.3.1
@@ -208,7 +285,9 @@ tornado==6.4.1
 tqdm==4.66.4
 traceback2==1.4.0
 traitlets==5.14.3
+transformers==4.40.2
 triton==2.3.1
+typeguard==4.1.2
 typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
@@ -216,7 +295,10 @@ unittest2==1.1.0
 urllib3==2.2.2
 wcwidth==0.2.13
 webencodings==0.5.1
+websockets==13.0.1
 Werkzeug==3.0.3
 wrapt==1.16.0
 yacs==0.1.8
 yarg==0.1.9
+zarr==2.18.3
+zipp==3.20.2
