--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,42 @@
-azureml_core==1.57.0.post1
-azureml_dataprep_native==41.0.0
-azureml_dataprep_rslex==2.22.4
-batchgenerators==0.25
-matplotlib==3.9.2
+albumentations==1.4.12
+azure-ai-ml==1.20.0
+azureml-core==1.57.0.post1
+azureml-dataset-runtime==1.57.0
+build==1.2.2.post1
+clearml==1.16.5rc0
+cucim-cu12==24.8.0
+einops==0.8.0
+fire==0.6.0
+gdown==5.2.0
+git-filter-repo==2.45.0
+h5py==3.11.0
+hd-glio==2.0
+ipykernel==6.29.5
+itk==5.4.0
+lmdb==1.5.1
+lpips==0.1.4
+mlflow==2.16.2
 monai==1.3.2
-nibabel==5.3.0
+nilearn==0.10.4
+ninja==1.11.1.1
+nni==3.0
 nnunetv2==2.4.2
-numpy==1.24.4
-pandas==2.2.3
-scikit_learn==1.5.2
-scipy==1.14.1
-SimpleITK==2.3.1
-SimpleITK==2.4.0
-torch==2.3.1
+onnx==1.16.2
+onnxruntime==1.18.1
+openslide-python==1.3.1
+optuna==4.0.0
+pipdeptree==2.23.4
+pipreqsnb==0.2.4
+pynrrd==1.0.0
+PySocks==1.7.1
+pytorch-ignite==0.4.11
+segmentation-models-pytorch==0.3.4
+tensorboard==2.17.0
+tensorboardX==2.6.2.2
+torchaudio==2.3.1
+torchio==0.19.9
+torchsummary==1.5.1
+transformers==4.40.2
+wheel==0.44.0
+xgboost==2.1.1
+zarr==2.18.3
