--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,11 @@ transformers==4.40.2
 wheel==0.44.0
 xgboost==2.1.1
 zarr==2.18.3
+asposestorage==1.0.2
+matplotlib==3.10.1
+nibabel==5.3.2
+plotly==6.0.1
+pydicom==3.0.1
+scipy==1.15.2
+SimpleITK==2.4.1
+streamlit==1.43.2
