--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,27 @@
-albumentations==1.4.12
-build==1.2.2.post1
-clearml==1.16.5rc0
-# cucim-cu12==24.8.0
-einops==0.8.0
-fire==0.6.0
-gdown==5.2.0
-git-filter-repo==2.45.0
-h5py==3.11.0
-hd-glio==2.0
-ipykernel==6.29.5
-itk==5.4.0
-lmdb==1.5.1
-lpips==0.1.4
-mlflow==2.16.2
-monai==1.3.2
-nilearn==0.10.4
-ninja==1.11.1.1
-nni==3.0
-nnunetv2==2.4.2
-onnx==1.16.2
-onnxruntime==1.18.1
-openslide-python==1.3.1
-optuna==4.0.0
-pipdeptree==2.23.4
-pipreqsnb==0.2.4
-pynrrd==1.0.0
-PySocks==1.7.1
-pytorch-ignite==0.4.11
-segmentation-models-pytorch==0.3.4
-tensorboard==2.17.0
-tensorboardX==2.6.2.2
-torchaudio==2.3.1
-torchio==0.19.9
-torchsummary==1.5.1
-transformers==4.40.2
-wheel==0.44.0
-xgboost==2.1.1
-zarr==2.18.3
-asposestorage==1.0.2
+altair==5.5.0
 matplotlib==3.10.1
+monai==1.4.0
+monai==1.3.2
 nibabel==5.3.2
+numpy==1.24.4
+opencv_contrib_python==4.11.0.86
+opencv_python_headless==4.10.0.84
+pandas==2.2.3
 plotly==6.0.1
 pydicom==3.0.1
+pyradiomics==3.0.1
+scikit_learn==1.6.1
 scipy==1.15.2
+seaborn==0.13.2
+SimpleITK==2.3.1
 SimpleITK==2.4.1
+SimpleITK==2.4.0
+SimpleITK==2.5.0
+statsmodels==0.14.4
+streamlit==1.41.1
 streamlit==1.43.2
+torch==2.6.0
+torch==2.3.1
+tqdm==4.66.4
+tqdm==4.67.1
+tqdm==4.67.0
