--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ plotly==6.0.1
 seaborn==0.13.2
 
 # medical imaging
-monai==1.4.0          
+monai==1.4.0
 nibabel==5.3.2
-SimpleITK==2.5.0   
+SimpleITK==2.5.0
 pydicom==3.0.1
 opencv_contrib_python==4.11.0.86
 opencv_python_headless==4.10.0.84
@@ -20,8 +20,9 @@ scikit_learn==1.6.1
 statsmodels==0.14.4
 
 # deep learning
-torch==2.6.0          
+torch==2.6.0
+tensorboard==2.17.0
 
 # UI / workflow
-streamlit==1.43.2     
+streamlit==1.43.2
 tqdm==4.67.1
